# this is the changelog for the openQRM-server project

12.1.2008	-	Matt	-	created initial framework
							designed dependencies setup
							implemented deb-packaging
13.1.2008	-	Matt	-	added support for rpm-packaging
14.1.2008	-	Matt	-	made tftpd plugin working
							made dhcpd plugin working
16.1.2008	-	Matt	-	added creating default initrd template
							added creating default boot-image
17.1.2008	-	Matt	-	added to init network on the intird
							added build-requirements check
19.1.2008	-	Matt	-	added root-execution environemnt for the server
							added to add new detected resources automatically