@@ -56,6 +56,11 @@ OPENQRM_SERVER_VERSION="4.0"
 # commands on the openQRM-server and its managed resources
 OPENQRM_EXEC_PORT=1667
 
+# OPENQRM_RESOURCE_BASE_DIR defines the basedir to use for
+# openQRM related stuff on the managed resources
+# by default it is set to the same as openQRM-server base-directory (/opt)
+OPENQRM_RESOURCE_BASE_DIR=/opt
+
 # these are the main openQRM-server dependencies
 # which configure the package-dependencies for the
 # different supported linux distributions
@@ -69,10 +74,6 @@ OPENQRM_EXEC_PORT=1667
 # for debian/ubuntu based systems the default doc root is at /var/www
 # for redhat-based systems docroot is at /var/www/html
 # for suse-based systems docroot is at /srv/www/htdocs/
-
-# OPENQRM_SERVER_DEFAULT_KERNEL defines the kernel for the default boot-image
-# please notice that the kernel should have EXT2 support statically compiled in
-# (needed to mount the initrd's which are in EXT2 format
 
 if [ -f /etc/debian_version ]; then
 	OPENQRM_SERVER_DEPENDENCIES="apache2, php5, php5-mysql, libphp-adodb, mysql-server, mysql-client-5.0, syslinux"
