@@ -12,3 +12,4 @@
 							added build-requirements check
 19.1.2008	-	Matt	-	added root-execution environemnt for the server
 							added to add new detected resources automatically
+							added starting the openrm-client on the booted resources
